@@ -1,3 +1,10 @@
+2006-01-30  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* src/yelp-toc-pager.c:
+	* stylesheets/toc2html.xsl:
+	- Bury man and info under 'Command Line Help'
+
 2006-01-29  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-html.cpp: 
